objects/TopBoxWG__TopBox_Feedback__c.object
<CustomObject>
    <description>For each submitted questionnaire response, TopBox can create a feedback record in Salesforce to show response and followup activity information. A unique TopBox feedback record is created for each response submitted and can be accessed from the Account and/or Contact layout. This allows for a convenient way to access and view responses for multiple questionnaires and track followup activity to ensure closing the loop with your customer.</description>
    <fields>
        <fullName>Relationship_TechSupport__c</fullName>
        <description>My ability to get technical assistance from Copado when needed (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Relationship_TechSupport_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Relationship_TechSupport_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>My ability to get technical assistance from Copado when needed (0-10 Rating)</inlineHelpText>
        <label>Relationship-TechSupport</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TopBox Feedback</relationshipLabel>
        <relationshipName>TopBox_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_Name__c</fullName>
        <formula>TopBoxWG__Contact_ID__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_Owner_Email__c</fullName>
        <formula>TopBoxWG__Account_ID__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Account_Owner_ID__c</fullName>
        <formula>TopBoxWG__Account_ID__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Additional_Comments__c</fullName>
        <inlineHelpText>Is there anything else you can tell us?</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Alert_Name__c</fullName>
        <label>Alert Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Alert_Owner__c</fullName>
        <label>Alert Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__CSM_Email__c</fullName>
        <formula>TopBoxWG__Account_ID__r.TopBoxWG__CSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__CSM__c</fullName>
        <formula>TopBoxWG__Account_ID__r.TopBoxWG__CSM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TopBox Feedback</relationshipLabel>
        <relationshipName>TopBox_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Contact_Me__c</fullName>
        <inlineHelpText>Do you need to speak with someone from Copado about an issue or question?</inlineHelpText>
        <label>Contact Me</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Contact_Name__c</fullName>
        <formula>TopBoxWG__Contact_ID__r.FirstName &amp; &apos; &apos; &amp; TopBoxWG__Contact_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Current_Status__c</fullName>
        <label>Current Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Followup_Last_Updated__c</fullName>
        <label>Followup Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Issue_Description__c</fullName>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Overall_Score__c</fullName>
        <inlineHelpText>(Onboarding) How well did your implementation experience enable you to most effectively utilize your Copado solution? (Relationship) If you were in a position to do so, how likely would you be to recommend Copado to colleagues?</inlineHelpText>
        <label>Sentiment (0-10 Rating)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Questionnaire_Sent_Date__c</fullName>
        <label>Questionnaire Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Questionnaire_Type__c</fullName>
        <label>Questionnaire Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Questionnaire_Wave__c</fullName>
        <label>Questionnaire Wave</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Resolved_On__c</fullName>
        <label>Resolved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Response_Date__c</fullName>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Role__c</fullName>
        <inlineHelpText>To ensure the questions we&apos;ll be asking you are most relevant, please select the sentence that best describes your relationship with Copado</inlineHelpText>
        <label>Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Sentiment__c</fullName>
        <label>Sentiment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Account_X_Ray__c</fullName>
        <label>TopBox Account X-Ray</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CTA__c</fullName>
        <label>TopBox CTA</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Individual_Response__c</fullName>
        <label>TopBox Individual Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Contact_Me_Comment__c</fullName>
        <description>Please tell us about what you would like to discuss:</description>
        <inlineHelpText>Please tell us about what you would like to discuss:</inlineHelpText>
        <label>Contact Me Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Contact_Method__c</fullName>
        <description>How do you want to be contacted?</description>
        <inlineHelpText>How do you want to be contacted?</inlineHelpText>
        <label>Contact Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Contact_Phone__c</fullName>
        <description>Please provide your preferred phone number including country code:</description>
        <inlineHelpText>Please provide your preferred phone number including country code:</inlineHelpText>
        <label>Contact-Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TopBox_Make_It_Right_Text__c</fullName>
        <description>The extent to which Copado makes things right if something goes wrong (0-10 Rating)</description>
        <inlineHelpText>The extent to which Copado makes things right if something goes wrong (0-10 Rating)</inlineHelpText>
        <label>Make It Right-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Make_It_Right__c</fullName>
        <description>The extent to which Copado makes things right if something goes wrong (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Make_It_Right_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Make_It_Right_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Make_It_Right_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Make_It_Right_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>The extent to which Copado makes things right if something goes wrong (0-10 Rating)</inlineHelpText>
        <label>Make It Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Meet_Expectations_Text__c</fullName>
        <description>Copado&apos;s ability to meet my expectations (0-10 Rating)</description>
        <inlineHelpText>Copado&apos;s ability to meet my expectations (0-10 Rating)</inlineHelpText>
        <label>Meet Expectations-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Meet_Expectations__c</fullName>
        <description>Copado&apos;s ability to meet my expectations (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Meet_Expectations_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Meet_Expectations_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Meet_Expectations_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Meet_Expectations_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>Copado&apos;s ability to meet my expectations (0-10 Rating)</inlineHelpText>
        <label>Meet Expectations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onb_Purchase_UsefulMaterials__c</fullName>
        <description>(Onboarding) The usefulness of the materials provided during your selection and purchase process (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_PurchaseMaterials_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) The usefulness of the materials provided during your selection and purchase process (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Purchase-UsefulMaterials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_OnboardingPurchaseExperienceText__c</fullName>
        <description>(Onboarding) Your overall experience with Copado during your selection and purchase process (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) Your overall experience with Copado during your selection and purchase process (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Purchase-Experience-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_BestPractices_Text__c</fullName>
        <description>(Onboarding) [Copado/Partner]’s ability to provide best-practices expertise (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) [Copado/Partner]’s ability to provide best-practices expertise (0-10 Rating)</inlineHelpText>
        <label>Onboarding-BestPractices-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_BestPractices__c</fullName>
        <description>(Onboarding) [Copado/Partner]’s ability to provide best-practices expertise (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_BestPractices_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) [Copado/Partner]’s ability to provide best-practices expertise (0-10 Rating)</inlineHelpText>
        <label>Onboarding-BestPractices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Enablement_Text__c</fullName>
        <description>(Onboarding) Enabling my team to maintain and use Copado going forward (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) Enabling my team to maintain and use Copado going forward (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Enablement-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Enablement__c</fullName>
        <description>(Onboarding) Enabling my team to maintain and use Copado going forward (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_Enablement_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_Enablement_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) Enabling my team to maintain and use Copado going forward (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Enablement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Implementation_Partner__c</fullName>
        <label>Onboarding Implementation Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_MakeItRight_Text__c</fullName>
        <description>(Onboarding) [Copado/Partner] makes things right if something goes wrong (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) [Copado/Partner] makes things right if something goes wrong (0-10 Rating)</inlineHelpText>
        <label>Onboarding-MakeItRight-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_MakeItRight__c</fullName>
        <description>(Onboarding) [Copado/Partner] makes things right if something goes wrong (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_MakeItRight_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) [Copado/Partner] makes things right if something goes wrong (0-10 Rating)</inlineHelpText>
        <label>Onboarding-MakeItRight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_ManageRisk_Text__c</fullName>
        <description>(Onboarding) Ability to effectively manage risk as part of the implementation (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) Ability to effectively manage risk as part of the implementation (0-10 Rating)</inlineHelpText>
        <label>Onboarding-ManageRisk-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_ManageRisk__c</fullName>
        <description>(Onboarding) Ability to effectively manage risk as part of the implementation (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_ManageRisk_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) Ability to effectively manage risk as part of the implementation (0-10 Rating)</inlineHelpText>
        <label>Onboarding-ManageRisk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_MeetExpectations_Text__c</fullName>
        <description>(Onboarding) Copado&apos;s ability to meet my expectations (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) Copado&apos;s ability to meet my expectations (0-10 Rating)</inlineHelpText>
        <label>Onboarding-MeetExpectations-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_MeetExpectations__c</fullName>
        <description>(Onboarding) Copado&apos;s ability to meet my expectations (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_MeetExpectations_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) Copado&apos;s ability to meet my expectations (0-10 Rating)</inlineHelpText>
        <label>Onboarding-MeetExpectations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_OverallComments__c</fullName>
        <description>(Onboarding-Overall Comments) Why do you feel this way?</description>
        <inlineHelpText>(Onboarding-Overall Comments) Why do you feel this way?</inlineHelpText>
        <label>Onboarding-OverallComments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Overall__c</fullName>
        <description>(Onboarding) How well did your implementation experience enable you to most effectively utilize your Copado solution? (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) How well did your implementation experience enable you to most effectively utilize your Copado solution? (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Overall</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_ProjectComms_Text__c</fullName>
        <description>(Onboarding) The usefulness of project status communications (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) The usefulness of project status communications (0-10 Rating)</inlineHelpText>
        <label>Onboarding-ProjectComms-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_ProjectComms__c</fullName>
        <description>(Onboarding) The usefulness of project status communications (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_ProjectComms_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) The usefulness of project status communications (0-10 Rating)</inlineHelpText>
        <label>Onboarding-ProjectComms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_PurchaseAcctTeamText__c</fullName>
        <description>(Onboarding) Ability of Copado’s Account Team to efficiently and effectively address your needs during the selection and purchase process (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) Ability of Copado’s Account Team to efficiently and effectively address your needs during the selection and purchase process (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Purchase-AcctTeam-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_PurchaseMaterials_Text__c</fullName>
        <description>(Onboarding) The usefulness of the materials provided during your selection and purchase process (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) The usefulness of the materials provided during your selection and purchase process (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Purchase-UsefulMaterials-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Purchase_AcctTeam__c</fullName>
        <description>(Onboarding) Ability of Copado’s Account Team to efficiently and effectively address your needs during the selection and purchase process (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_PurchaseAcctTeamText__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) Ability of Copado’s Account Team to efficiently and effectively address your needs during the selection and purchase process (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Purchase-AcctTeam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Purchase_Experience__c</fullName>
        <description>(Onboarding) Your overall experience with Copado during your selection and purchase process (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;NA&apos;,NULL,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;N/A&apos;,NULL,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_OnboardingPurchaseExperienceText__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) Your overall experience with Copado during your selection and purchase process (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Purchase-Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_RecommendPartner__c</fullName>
        <description>(Onboarding) If you were in a position to do so, how likely would you be to recommend [Partner] to colleagues? (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) If you were in a position to do so, how likely would you be to recommend [Partner] to colleagues? (0-10 Rating)</inlineHelpText>
        <label>Onboarding-RecommendPartner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Recommend__c</fullName>
        <description>(Onboarding) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) If you were in a position to do so, how likely would you be to recommend Copado to colleagues? (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Recommend</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Success_Text__c</fullName>
        <description>(Onboarding) [Copado/Partner] cares about my success (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) [Copado/Partner] cares about my success (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Success-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_Success__c</fullName>
        <description>(Onboarding) [Copado/Partner] cares about my success (0-10 Rating)</description>
        <formula>VALUE(
IF(TopBox_Onboarding_Success_Text__c=&apos;NA&apos;,NULL,
IF(TopBox_Onboarding_Success_Text__c=&apos;N/A&apos;,NULL,
IF(TopBox_Onboarding_Success_Text__c=&apos;0&apos;,&apos;0&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;1&apos;,&apos;1&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;2&apos;,&apos;2&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;3&apos;,&apos;3&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;4&apos;,&apos;4&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;5&apos;,&apos;5&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;6&apos;,&apos;6&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;7&apos;,&apos;7&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;8&apos;,&apos;8&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;9&apos;,&apos;9&apos;,
IF(TopBox_Onboarding_Success_Text__c=&apos;10&apos;,&apos;10&apos;,
NULL))))))))))))))</formula>
        <inlineHelpText>(Onboarding) [Copado/Partner] cares about my success (0-10 Rating)</inlineHelpText>
        <label>Onboarding-Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBox_Onboarding_UsefulMaterials_Text__c</fullName>
        <description>(Onboarding) The usefulness of the materials provided (0-10 Rating)</description>
        <inlineHelpText>(Onboarding) The usefulness of the materials provided (0-10 Rating)</inlineHelpText>
        <label>Onboarding-UsefulMaterials-Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>